--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     "babel-loader": "^8.2.5",
     "core-js": "^3.25.3",
     "graphql": "^16.6.0",
-    "graphql-request": "^5.0.0",
     "graphql-ws": "^5.11.2",
     "nuxt": "^2.15.8",
-    "vue": "^2.7.10",
-    "vue-server-renderer": "^2.7.10",
+    "vue-server-renderer": "^2.7.10",    "vue": "^2.7.10",
+
     "vue-template-compiler": "^2.7.10"
   },
   "devDependencies": {
